<resources>
    <string name="app_name">Leadforce</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="plan">Plan</string>
    <string name="deal">Deal</string>
    <string name="activity">Activity</string>
    <string name="info">Info</string>
    <string name="more">More</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="k_venkatakrishnan">K Venkatakrishnan</string>
    <string name="keertana_facility_management_service_deal">Keertana facility management service deal</string>
    <string name="keertana_facility_management_service">Keertana facility management service</string>
</resources>